// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withError should not render error state when "error" props is true 1`] = `
<div>
  my awesome component
</div>
`;

exports[`withError should render custom error state message when "error" props is true 1`] = `
<div
  class="no-results-root flex-grow-1"
>
  <div
    class="no-results-content"
  >
    <h4
      class="no-results-title"
    >
      Sorry, it is an error!
    </h4>
  </div>
</div>
`;

exports[`withError should render error state when "error" props is true 1`] = `
<div
  class="no-results-root flex-grow-1"
>
  <div
    class="no-results-content"
  >
    <h4
      class="no-results-title"
    >
      Sorry, an error occurred.
    </h4>
  </div>
</div>
`;
